# hupdater

./: Cargo.toml  LICENSE  README.md  build.rs  hupdater.exe.manifest  hupdater.rc
.github/workflows/: release.yml
src/: main.rs
src/ui/: events.rs  mod.rs
ui/: app.slint
