[package]
name = "hupdater"
version = "0.1.2"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
winreg = "0.52"
anyhow = "1.0"
confy = "0.6"
mslnk = "0.1"
windows = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_HiDpi", "Win32_Foundation", "Win32_UI_Shell", "Win32_System_Com", "Win32_UI_Shell_PropertiesSystem", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_Graphics_Dwm", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_Security", "Win32_Graphics_Gdi", "Win32_UI_Controls"] }

[build-dependencies]
embed-resource = "1.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
